pod-selinux/negative-test-case.yaml
apiVersion: v1
kind: Pod
metadata:
    name: alpine-selinux-disallowed
    labels:
        app: alpine-selinux
spec:
  containers:
  - name: alpine
    image: alpine:3.13.7
    command:
      - /bin/sh
      - "-c"
      - "sleep 60m"
    resources:
      limits:
        cpu: "100m"
        memory: "500Mi"
    securityContext:
      seLinuxOptions:
        level: s1:c234,c567
        user: sysadm_u
        role: sysadm_r
        type: svirt_lxc_net_t
